--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-plugin-macros": "^2.0.0",
     "babel-plugin-tester": "^5.5.1",
     "babel-preset-fbjs": "^3.1.2",
+    "better-sqlite3": "^5.4.0",
     "chalk": "^2.4.1",
     "create-react-class": "^15.6.0",
     "del": "3.0.0",
