--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "gulp-chmod": "2.0.0",
     "gulp-flatten": "0.4.0",
     "gulp-header": "2.0.7",
+    "gulp-rename": "^1.4.0",
     "gulp-util": "3.0.8",
     "immutable": "~3.7.6",
     "jest": "^24.1.0",
